# crawl

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup-environment.sh
notebooks/: get-seed-urls.ipynb  get_seed_urls.ipynb  getting-started-on-selenium.ipynb  writing-your-first-scraper.ipynb
src/crawl/: crawler.py
